@@ -49,6 +49,7 @@ public final class ClientSendOps {
 		SHOW_STATUS_INFO = 0x24,
 		SHOW_QUEST_COMPLETION = 0x2E,
 		SHOW_HIRED_MERCHANT_AGREEMENT = 0x2F,
+		BBS_OPERATION = 0x38,
 		PERSONAL_INFO_RESPONSE = 0x3A,
 		PARTY_LIST = 0x3B,
 		BUDDY_LIST = 0x3C,
